--- a/css/projetos.css
+++ b/css/projetos.css
@@ -14,7 +14,7 @@
   .projetos {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 20px;
+    gap: 100px;
   }
 
   .titulo-projeto h3 {
@@ -86,4 +86,6 @@
   .align-right {
     justify-content: flex-end;
   }
+  
+
   
