--- a/css/projetos.css
+++ b/css/projetos.css
@@ -30,14 +30,15 @@
   
   .project-card {
     background-color: #e7e7e7;
-    border-radius: 10px;
     padding: 20px;
     max-width: 540px;
     transition: transform 0.2s ease-in-out; 
+    transition: 0.6s;
   }
   
   .project-card:hover {
     transform: translateY(-5px); 
+    border-radius: 20px;
   }
   
   .project-card img {
